# appstore-mcp

./: .gitignore  AGENTS.md  CONTEXT.md  PLAN.md  README.md  RELEASING.md  fastmcp.json  http.fastmcp.json  pyproject.toml  server.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  live.yml  release.yml
docs/adr/: 0001-sampling-only-for-data-reduction.md  0002-tools-package-for-orchestration.md  0003-stdio-only-transport.md  0004-compact-response-shape-with-raw-opt-in.md  0005-data-source-fragility-gradient.md  0006-two-tier-failure-semantics.md  0007-in-memory-ttl-cache-no-proactive-throttle.md  0008-fastmcp-context-usage.md  0009-fastmcp-middleware-usage.md  0010-fastmcp-lifespan-no-depends.md  0011-fastmcp-background-tasks-usage.md  0012-additive-hosted-http-mode.md
docs/agents/: domain.md  issue-tracker.md
mcpb/: .gitignore  build.sh  manifest.json
mcpb/server/: main.py
scripts/: claude_code_integration_test.py
src/appstore_mcp/: cache.py  digest.py  errors.py  models.py  runtime.py  server.py
src/appstore_mcp/apple/: charts.py  fetch.py  ids.py  itunes.py  normalize.py  page.py  reviews.py  screenshots.py
src/appstore_mcp/tools/: app.py  charts.py  compare.py  reviews.py  screenshots.py  search.py
tests/: conftest.py  test_cache.py  test_charts.py  test_compare.py  test_digest.py  test_ids.py  test_itunes.py  test_live.py  test_normalize.py  test_page.py  test_reviews.py  test_runtime.py  test_screenshots.py  test_server.py  test_stdio.py
tests/apple/: __init__.py  test_screenshots.py
tests/fixtures/: charts_topfree_education_us.json  charts_topfree_us.json  lookup_duolingo_us.json  lookup_multi_us.json  page_duolingo_us.html  reviews_duolingo_us_p1.json  search_language_learning_us.json
tests/tools/: __init__.py  test_app.py  test_charts.py  test_compare.py  test_reviews.py  test_screenshots.py  test_search.py
