[project]
name = "appstore-mcp"
version = "0.1.0"
description = "Open-source MCP server for live Apple App Store competitor research"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Laurence Mostert" }]
keywords = ["mcp", "app-store", "apple", "aso", "competitor-research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=3",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
anthropic = ["fastmcp[anthropic]"]
openai = ["fastmcp[openai]"]

[project.urls]
Homepage = "https://github.com/LaurMost/appstore-mcp"
Issues = "https://github.com/LaurMost/appstore-mcp/issues"

[project.scripts]
appstore-mcp = "appstore_mcp.server:main"

[dependency-groups]
dev = [
    "mypy>=1.13",
    "pytest>=8",
    "pytest-asyncio>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/appstore_mcp"]

[tool.pytest.ini_options]
addopts = "-m 'not live'"
markers = ["live: hits live Apple endpoints; run explicitly with -m live"]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["appstore_mcp"]
