[project]
name = "appstore-mcp"
version = "0.1.0"
description = "Open-source MCP server for live Apple App Store competitor research"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Laurence Mostert" }]
keywords = ["mcp", "app-store", "apple", "aso", "competitor-research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    # [tasks] (docket) is required, not optional: TaskConfig(mode!="forbidden")
    # validates via require_docket() at tool-registration time regardless of
    # whether any client ever requests a background task, so it must always
    # be installed, not left to an opt-in extra like anthropic/openai below.
    "fastmcp[tasks]>=3",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
anthropic = ["fastmcp[anthropic]"]
openai = ["fastmcp[openai]"]

[project.urls]
Homepage = "https://github.com/LaurMost/appstore-mcp"
Issues = "https://github.com/LaurMost/appstore-mcp/issues"

[project.scripts]
appstore-mcp = "appstore_mcp.server:main"

[dependency-groups]
dev = [
    "dirty-equals>=0.11",
    "inline-snapshot>=0.34.2",
    "mypy>=1.13",
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/appstore_mcp"]

[tool.pytest.ini_options]
addopts = "-m 'not live'"
markers = ["live: hits live Apple endpoints; run explicitly with -m live"]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # bugbear
    "UP",    # pyupgrade
    "SIM",   # simplify
    "C4",    # comprehensions
    "ASYNC", # async pitfalls
    "T20",   # ban print/pprint - stdout is the JSON-RPC channel
    "PT",    # pytest style
    "RUF",   # ruff-specific
]

[tool.ruff.lint.flake8-bugbear]
# CurrentContext()/Progress() as parameter defaults are fastmcp's
# dependency-injection idiom, not the mutable-default bug B008 guards against.
extend-immutable-calls = [
    "fastmcp.dependencies.CurrentContext",
    "fastmcp.dependencies.Progress",
    "pydantic.Field",
]

[tool.ruff.lint.per-file-ignores]
# Standalone dev scripts print to stdout by design - the T20 stdout-is-the-
# JSON-RPC-channel rule only applies to the server package.
"scripts/*" = ["T20"]
# inline-snapshot embeds real Apple fixture data verbatim (long description
# paragraphs -> E501; curly apostrophes in release notes -> RUF001), so those
# rules don't apply to generated snapshot literals in the test suite.
"tests/*" = ["E501", "RUF001"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["appstore_mcp"]
